[package]
name = "ace"
version = "0.1.0"
edition = "2021"

[lib]
name = "ace"
crate-type = ["cdylib"]

[dependencies]
arma-rs = { version = "1.11.10", default-features = false, features = ["extension", "uuid"]}
uuid = { version = "1.10.0", features = ["v4"] }
rand = "0.8.5"
rand_chacha = "0.3.1"

# Artillery
rayon = "1.10.0"

# Clipboard
arboard = { version = "3.4.0" }

[build-dependencies]
git2 = "0.19.0"
