[package]
name = "ace"
version = "0.1.0"
edition = "2024"

[lib]
name = "ace"
crate-type = ["cdylib"]

[dependencies]
arma-rs = { version = "1.11.15", default-features = false, features = ["extension", "uuid"]}
uuid = { version = "1.19.0", features = ["v4"] }
rand = "0.8.5"
rand_chacha = "0.3.1"

# Artillery
rayon = "1.10.0"

# Clipboard
arboard = { version = "3.4.0" }

# Window
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading"
] }

[build-dependencies]
git2 = "0.20.2"
